# mlsyn

./: CMakeLists.txt  README.md
cmake/modules/: AddMLSyn.cmake
include/mlsyn/Core/: Language.h  MLSynContext.h  Symbol.h  SyntaxContext.h  SyntaxExpander.h
include/mlsyn/Language/Builtin/: Expanders.h
include/mlsyn/Support/: LLVM.h  MLIR.h  re2c.h
lib/Core/: CMakeLists.txt  Symbol.re2c.cpp  SyntaxContext.cpp
lib/Support/: re2c.cpp
